--- a/Css/bootstrap.css
+++ b/Css/bootstrap.css
@@ -10976,6 +10976,10 @@ a.text-dark:hover, a.text-dark:focus {
 
 .size-btn{
   height: 10%;
+  text-align: center;
+  vertical-align: middle;
+  padding: 10%;
+  color:#fff;
 }
 
 /*horizontal*/
