--- a/Css/bootstrap.css
+++ b/Css/bootstrap.css
@@ -3693,7 +3693,7 @@ input[type="button"].btn-block {
   position: relative;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: flow-root;
   vertical-align: middle;
 }
 
@@ -10982,6 +10982,14 @@ a.text-dark:hover, a.text-dark:focus {
   color:#fff;
 }
 
+.size-btn2{
+  height: 5%;
+  text-align: center;
+  vertical-align: middle;
+  padding: 2%;
+  color:#fff;
+}
+
 /*horizontal*/
 .btn-group-horizontal > .btn {
   position: relative;
@@ -11127,4 +11135,16 @@ a.text-dark:hover, a.text-dark:focus {
   position: relative;
   left: 1500px;
   bottom: 360px;
+}
+
+.btnCategoria{
+  width: 25%;
+  margin: 1%;
+  height: 50%;
+}
+
+.lead-3{
+  font-size: 1.171875rem;
+  font-weight: 300;
+  width: 100%;
 }
